--- a/src/style.css
+++ b/src/style.css
@@ -42,10 +42,13 @@ body {
 
 @layer base {
   h1 {
-    @apply text-3xl font-heading font-medium;
+    @apply text-2xl md:text-3xl font-heading font-medium;
   }
   h2 {
     @apply text-lg font-heading;
+  }
+  h3 {
+    @apply text-lg font-heading font-medium;
   }
   p {
     @apply font-base text-base;
