--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Libre+Caslon+Display&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @import "tailwindcss";
 
 html,
@@ -9,7 +8,6 @@ body {
 }
 
 body {
-  background: #faf9fb;
   color: #1f1f1f;
   margin: 0;
   padding: 0;
@@ -43,9 +41,8 @@ body {
 }
 
 @theme {
-  --font-subheading: "Libre Caslon Display", sans-serif;
-  --font-heading: "Raleway", sans-serif;
-  --font-base: "Lato", sans-serif;
+  --font-heading: "Montserrat", sans-serif;
+  --font-base: "Inter", sans-serif;
 
   --color-primary: #b98801;
   --color-dark: #1f1f1f;
@@ -59,7 +56,7 @@ body {
 
 @layer base {
   h1 {
-    @apply text-2xl md:text-3xl font-heading font-medium;
+    @apply text-3xl font-heading font-medium;
   }
   h2 {
     @apply text-lg font-heading;
@@ -67,11 +64,17 @@ body {
   h3 {
     @apply text-lg font-heading font-medium;
   }
+  h4 {
+    @apply text-base font-heading font-semibold;
+  }
   p {
     @apply font-base text-lg;
   }
   button {
     @apply cursor-pointer;
+  }
+  li {
+    @apply list-none;
   }
 }
 
@@ -95,7 +98,7 @@ body {
     @apply w-full h-[200px] object-cover rounded-lg;
   }
   .logo {
-    @apply text-xl font-medium font-heading;
+    @apply text-3xl font-medium font-heading;
   }
   .btn {
     @apply bg-primary text-white font-semibold font-heading py-2 px-4 cursor-pointer text-center;
