--- a/src/style.css
+++ b/src/style.css
@@ -53,10 +53,15 @@ body {
 
   h2,
   h3,
-  h4,
+  h4 {
+    font-family: "Montserrat", sans-serif;
+    margin: 0;
+    font-weight: 600;
+  }
+
   p {
     font-family: "Inter", sans-serif;
-    margin: 0;
+    line-height: 1.6;
   }
 
   .logo {
@@ -71,7 +76,7 @@ body {
 
   li {
     list-style: none;
-    font-weight: 300;
+    font-weight: 600;
   }
 }
 
