--- a/src/style.css
+++ b/src/style.css
@@ -51,7 +51,12 @@ body {
     font-weight: 500;
   }
 
-  h2,
+  h2 {
+    font-size: 1.5rem;
+    font-weight: 600;
+    font-family: "Montserrat", sans-serif;
+  }
+
   h3,
   h4 {
     font-family: "Montserrat", sans-serif;
