--- a/src/style.css
+++ b/src/style.css
@@ -49,6 +49,8 @@ body {
     font-family: "Inter", sans-serif;
     font-size: 2rem;
     font-weight: 500;
+    text-align: center;
+    margin-top: 1rem;
   }
 
   h2 {
